--- a/index.html
+++ b/index.html
@@ -3,25 +3,23 @@
   <head>
     <title>Anywhere chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" />
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-9">
+          <ul id="messages"></ul>
+          <form action="">
+            <input id="m" autocomplete="off" /><button>Send</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
     <script>
         $(function () {
             var socket = io();
@@ -30,6 +28,12 @@
                 $('#m').val('');
                 return false;
             });
+
+            $('#m').keyup(function() {
+              if($(this).val().trim() != "") {
+                socket.emit('typing', $('#m').val());
+              }
+            })
 	    socket.on('chat message', function(msg){
       	        $('#messages').append($('<li>').text(msg));
    	     });
